; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/net/extr_qeth_core_main.c_qeth_get_ipacmd_buffer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/net/extr_qeth_core_main.c_qeth_get_ipacmd_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qeth_cmd_buffer = type { i64 }
%struct.qeth_card = type { i32 }
%struct.qeth_ipa_cmd = type { i32 }

@IPA_PDU_HEADER_SIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.qeth_cmd_buffer* @qeth_get_ipacmd_buffer(%struct.qeth_card* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.qeth_card*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.qeth_cmd_buffer*, align 8
  %8 = alloca %struct.qeth_ipa_cmd*, align 8
  store %struct.qeth_card* %0, %struct.qeth_card** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load %struct.qeth_card*, %struct.qeth_card** %4, align 8
  %10 = getelementptr inbounds %struct.qeth_card, %struct.qeth_card* %9, i32 0, i32 0
  %11 = call %struct.qeth_cmd_buffer* @qeth_wait_for_buffer(i32* %10)
  store %struct.qeth_cmd_buffer* %11, %struct.qeth_cmd_buffer** %7, align 8
  %12 = load %struct.qeth_cmd_buffer*, %struct.qeth_cmd_buffer** %7, align 8
  %13 = getelementptr inbounds %struct.qeth_cmd_buffer, %struct.qeth_cmd_buffer* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @IPA_PDU_HEADER_SIZE, align 8
  %16 = add nsw i64 %14, %15
  %17 = inttoptr i64 %16 to %struct.qeth_ipa_cmd*
  store %struct.qeth_ipa_cmd* %17, %struct.qeth_ipa_cmd** %8, align 8
  %18 = load %struct.qeth_card*, %struct.qeth_card** %4, align 8
  %19 = load %struct.qeth_ipa_cmd*, %struct.qeth_ipa_cmd** %8, align 8
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @qeth_fill_ipacmd_header(%struct.qeth_card* %18, %struct.qeth_ipa_cmd* %19, i32 %20, i32 %21)
  %23 = load %struct.qeth_cmd_buffer*, %struct.qeth_cmd_buffer** %7, align 8
  ret %struct.qeth_cmd_buffer* %23
}

declare dso_local %struct.qeth_cmd_buffer* @qeth_wait_for_buffer(i32*) #1

declare dso_local i32 @qeth_fill_ipacmd_header(%struct.qeth_card*, %struct.qeth_ipa_cmd*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
